[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iruka-vfs"
version = "0.1.0"
description = "Virtual filesystem runtime for agent-driven editing workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "redis>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["iruka_vfs*"]
